fix overflow hidden

--- a/pages/movies/movies.module.scss
+++ b/pages/movies/movies.module.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100vw;
   min-height: 800px;
-
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
